# backend-template

./: .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/domain/: client.py  container.py  exception.py  model.py  orm.py
app/domain/infra/: pokemon_repository.py
app/infra/: pokemon_repository.py
app/presentation/: endpoint.py
app/usecase/: pokemon_usecase.py
