[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mamoru Matsunaga <m2-matsunaga@nri.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
isort = "^5.12.0"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
line-length = 120
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["^app/presentation/endpoint.py$", "^tests/[^/]+\\.py$", "^docs"]

[tool.taskipy.tasks]
format = {cmd = "poetry run isort . && poetry run black .", help = "Run the formatter."}  # フォーマッタを実行
lint = {cmd = "poetry run ruff . && poetry run mypy .", help = "Run the linter."}  # リンタを実行
ci = {cmd = "poetry run isort . && poetry run black . && poetry run ruff . && poetry run mypy .", help = "Run all CI tasks."}  # 全てのCIタスクを実行
test = {cmd = "poetry run pytest .", help = "Run all tests."}
dev = {cmd = "poetry run uvicorn app.main:app --reload", help = "Start the api"}
up = {cmd = "docker compose up", help = "start container"}
down = {cmd = "docker compose down", help = "stop container"}